--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Feedback - Spark Bin</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 <header> 
@@ -32,6 +32,6 @@
   </section>
 
   <footer>© 2025 Spark Bin. All Rights Reserved.</footer>
-  <script src="/script.js"></script>
+  <script src="../script.js"></script>
 </body>
 </html>
