--- a/pages/order.html
+++ b/pages/order.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Order Now - Spark Bin</title>
-  <link rel="stylesheet" href="/style.css">
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="../style.css">
+  <script src="../script.js" defer></script>
   <style>
     .navbar{
     display: flex;
