--- a/pages/product.html
+++ b/pages/product.html
@@ -29,7 +29,7 @@
 
     <a href="./order.html"><button class="order">Order Now</button></a>
   </section>
-<script src="/script.js"></script>
+<script src="../script.js"></script>
   <footer>© 2025 Spark Bin. All Rights Reserved.</footer>
   
 </body>
